Fix horizontal scrolling of wiki tables

--- a/KnowWE-Plugins/KnowWE-Plugin-InstantEdit/src/main/resources/webapp/KnowWEExtension/css/DefaultTableEditTool.css
+++ b/KnowWE-Plugins/KnowWE-Plugin-InstantEdit/src/main/resources/webapp/KnowWEExtension/css/DefaultTableEditTool.css
@@ -2,6 +2,11 @@
 	display: inline-block;
 	position: relative;
 	padding-right: 42px;
+	max-width: 100%;
+}
+
+.wiki-table.scroll-parent {
+	overflow: auto;
 }
 
 .tablePopupIcon {
